--- a/app/scss/_core.scss
+++ b/app/scss/_core.scss
@@ -2,25 +2,22 @@
 html,
 body {
     height: 100%;
+    display: flex;
+    background-color: #292929;    
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.wrapper {
+.app {
     display: flex;
     flex-direction: column;
-    min-height: 100%;
-}
-
-.main {
-    flex: 1 0 auto;
-}
-
-.footer {
-    flex: 0 0 auto;
+    max-width: 480px;
+    margin: 0 auto;
 }
 
 .container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
-
 }
