--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -8,3 +8,58 @@
 @import '_footer';
 
 /* Main */
+
+.title {
+  font-family: Rye;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 39px;
+  line-height: 0;  
+  margin: 20px 0;
+  color: #307040;
+  text-align: center;
+}
+
+.metrics {
+  font-family: Saira;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 38px;
+  color: #E1B96F;
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0;
+}
+
+.btn {
+  width: 300px;
+  height: 80px;
+  background: #307040;
+  border-radius: 10px;  
+  border: none;
+  outline: none;
+  font-family: Rye;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 39px;
+  line-height: 49px;  
+  color: #1c1b1b;  
+  cursor: pointer;
+  transition: opacity .3s linear;
+  margin: 35px auto;
+}
+
+.btn:hover {
+  opacity: 0.8;
+}
+
+.btn:active {
+  transform: translate(0, 1px);
+}
+
+.slider {
+  width: 100%;
+  height: 260px;
+  background-color: #241929;
+}
